# LuisaComputeSimulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.lua  xmake.lua
.github/workflows/: cmake-multi-platform.yml  cmake.yml  cmake_linux..yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml  xmake.yml  xmake.yml.backup
Application/: app_offline_renderer.cpp  app_simulation.cpp  app_simulation_demo_config.cpp  app_simulation_demo_config.h  app_simulation_v2.cpp  app_test_features.cpp  xmake.lua  zzpch.h
Document/: Build.md  Energies.md  affine_body_symbolic.ipynb  contact_energy.ipynb  distance.ipynb  inertia.ipynb  stretch.ipynb
PythonBindings/: example_usage.py  python_bindings.cpp
Resources/Scenes/: cloth_friction.json  cloth_moving_boundary.json  cloth_pinned.json  cloth_rigid_coupling_drop.json  cloth_rigid_coupling_funnel.json  cloth_rigid_coupling_high_res.json  cloth_rotation_cylinder_7K.json  cloth_rotation_cylinder_88K.json  cloth_rotation_square.json  cloth_test_groud_ccd.json  cloth_unit_test_square2.json  cloth_unit_test_triangle1.json  default_scene.json  rigid_bucket.json  rigid_folding_cubes.json  rigid_frictional_test.json  rigid_mass_matrix_test.json  rigid_multi_folding_cubes.json  rigid_multi_multi_folding_cubes.json  rigid_test_shell.json  rigid_test_solid.json  rigid_unit_test_cube.json
Solver/: xmake.lua  zzpch.h
Solver/CollisionDetector/: aabb.h  accd.cpp  accd.h  accd.hpp  cipc_kernel.hpp  codim_ipc_contact.ipynb  codim_ipc_energy.py  distance.hpp  friction_kernel.hpp  lbvh.cpp  lbvh.h  narrow_phase.cpp  narrow_phase.h
Solver/CollisionDetector/libuipc/: codim_ipc_contact.inl  codim_ipc_contact_function.h  codim_ipc_simplex_normal_contact_function.h
Solver/CollisionDetector/libuipc/distance/: distance_flagged.h  edge_edge.h  edge_edge_mollifier.h  point_edge.h  point_point.h  point_triangle.h
Solver/CollisionDetector/libuipc/distance/details/: edge_edge.inl  edge_edge_mollifier.inl  point_edge.inl  point_point.inl  point_triangle.inl
Solver/Core/: affine_position.h  bits_utils.h  constant_value.h  float_n.h  float_nxn.h  lc_to_eigen.h  matrix_triplet.h  scalar.h  sugar.h  svd_2x2.h  svd_3x3.h  xbasic_types.h
Solver/Energy/: bending_energy.h  fem_energy.h  frame_2.state  stretch_energy.h  test_affine_body_sim.py  test_avbd_rigid_body.py  test_newtol_optimization.py
Solver/Energy/EnergyDoduments/: test_affine_body_sim.py
Solver/Initializer/: init_collision_data.cpp  init_collision_data.h  init_mesh_data.cpp  init_mesh_data.h  init_sim_data.cpp  init_sim_data.h  init_xpbd_data.cpp  init_xpbd_data.h  initializer_utils.h  simulation_data.h
Solver/LinearSolver/: precond_cg.cpp  precond_cg.h
Solver/MeshOperation/: default_mesh.h  mesh_reader.cpp  mesh_reader.h  tiny_obj_loader.h
Solver/SimulationCore/: base_mesh.h  collision_data.h  physical_material.h  scene_params.cpp  scene_params.h  simulation_data.h  simulation_type.h  solver_interface.cpp  solver_interface.h
Solver/SimulationSolver/: descent_solver.cpp  descent_solver.h  newton_solver.cpp  newton_solver.h  solver_interface.cpp  solver_interface.h
Solver/Utils/: async_compiler.h  buffer_allocator.h  buffer_filler.cpp  buffer_filler.h  cpu_parallel.h  device_parallel.cpp  device_parallel.h  grid_stride_loop.h  reduce_helper.h  runtime.h
UnitTest/: CMakeLists.txt  test_abd_energy.cpp  test_host_functions.cpp  test_jit.cpp  test_lbvh_refit.cpp  test_lc_features.cpp  test_xtypes.cpp
ext/: CMakeLists.txt  polyscope_pch.h  xmake.lua
ext/glad_ogl33/include/glad/: glad.h
ext/glad_ogl33/src/: glad.c
